--- a/ui/src/sass/_colors.scss
+++ b/ui/src/sass/_colors.scss
@@ -8,6 +8,7 @@ $color-white       : rgb(255, 255, 255);
 $color-white-back  : rgb(246, 246, 246);
 $color-link        : rgb(255, 185, 29);
 $color-orange-back :rgb(207, 153, 3);
+$color-warning     :rgb(255, 140, 0);
 $color-gradient1   : rgba(0, 0, 0, 0.3);
 $color-gradient2   : rgba(0, 0, 0, 0.8);
 $color-blue        : rgb(0, 123, 255);
