Working on workcells UI

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -28,6 +28,12 @@
   margin-left: 15px;
 }
 
+.text-workcell-description {
+  height: 140px;
+  width: 320px;
+  margin-left: 21px;
+}
+
 .input-display-name {
   margin-left: 59px;
 }
