--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -8,6 +8,33 @@
   margin-left: -169px;
 }
 
+.button-next{
+  color: white;
+  background-color: #49b5f3;
+  border-style: groove;
+  border-radius: 5px;
+  border: none;
+  padding-left: 20px;
+  padding-right: 25px;
+  cursor: pointer;
+  float:right;
+  margin-top: 34px;
+
+}
+
+.button-back{
+  color: white;
+  background-color: #49b5f3;
+  border-style: groove;
+  border-radius: 5px;
+  border: none;
+  padding-left: 20px;
+  padding-right: 25px;
+  cursor: pointer;
+  margin-top: 34px;
+
+}
+
 .user-box {
   margin-top: 30px;
   border-style: groove;
@@ -23,6 +50,10 @@
 
 .input-tag-code {
   margin-left: 48px;
+
+  &.asset-code{
+    margin-left: 58px;
+  }
 }
 
 .label-tag-category {
@@ -31,16 +62,28 @@
 
 .select-tag-category {
   margin-left: 41px;
+
+  &.asset-automation{
+    margin-left: 10px;
+  }
 }
 
 .input-tag-name {
   margin-left: 43px;
+
+  &.asset-name{
+    margin-left: 53px;
+  }
 }
 
 .input-tag-description {
   width: 250px;
   height: 100px;
   margin-left: 5px;
+
+  &.asset-description{
+    margin-left: 15px;
+  }
 }
 
 .input-tag-tag {
@@ -49,10 +92,34 @@
 
 .input-tag-aggregation {
   margin-left: 14px;
+
+  &.asset-site-code{
+    margin-left: 69px;
+  }
+
+  &.asset-escalation{
+    margin-left: 11px;
+  }
 }
 
 .select-tag-type {
   margin-left: 24px;
+
+  &.asset-level{
+    margin-left: 59px;
+  }
+
+  &.asset-parent{
+    margin-left: 8px;
+  }
+
+  &.asset-asset{
+    margin-left: 41px;
+  }
+
+  &.asset-workcell{
+    margin-left: 74px;
+  }
 }
 
 .input-reason-code {
