--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -512,6 +512,7 @@
 
 		&.site-name {
 			margin-left: 135px;
+			background-color: gainsboro;
 		}
 
 		&.timezone {
@@ -551,7 +552,7 @@
 		}
 
 		&.input-site-code {
-			margin-left: 112px;
+			margin-left: 89px;
 		}
 
 		&.input-vertical-dashboard {
