working on common assets drag and drop module

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -234,9 +234,11 @@
 
 .select-tag-category {
 	margin-left: 41px;
+	padding-right: 42px;
 
 	&.asset-automation {
 		margin-left: 10px;
+		padding-right: 42px;
 	}
 }
 
@@ -275,7 +277,7 @@
 }
 
 .select-tag-type {
-	margin-left: 24px;
+	margin-left: 15px;
 
 	&.asset-level {
 		margin-left: 59px;
@@ -291,6 +293,10 @@
 
 	&.asset-workcell {
 		margin-left: 74px;
+	}
+
+	&.uom-code{
+		margin-left: 24px;
 	}
 }
 
