Update Break Logic to insert by group, minor changes in the Tag module

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -15,6 +15,10 @@
 	color: $color-red;
 }
 
+.general-modal .modal-dialog {
+    max-width: 50%;
+}
+
 .commonParametersForm {
 	padding-left: 2%;
 	padding-top : 2%;
