working on edit assets

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -301,7 +301,8 @@
 	}
 
 	&.asset-escalation {
-		margin-left: 11px;
+		margin-left: 21px;
+		padding-left: 76px;
 	}
 }
 
@@ -310,6 +311,7 @@
 
 	&.asset-level {
 		margin-left: 59px;
+		padding-left: 66px;
 	}
 
 	&.asset-parent {
