modify asset module. Include translations, and filters

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -687,6 +687,16 @@
 		margin-top: -40px;
 		margin-left: 10px;
 	}
+
+	.drop-autLevel {
+		max-width: 200px;
+		float: left;
+		/* width   : auto; */
+		height: auto;
+		display: flex;
+		margin-top: -40px;
+		margin-left: 10px;
+	}
 }
 
 //STYLES FOR CARD
